infra/k8s/auth-depl.yaml
apiVersion: apps/1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
template:
  metadata:
    labels:
      app: auth
  spec:
    containers:
      - name: auth
        image: dushberd/auth

---

apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocal: TCP
      port: 3000
      targetPort: 3000
