infra/k8s/client.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
        - name: client-service
          image: dushberd/client   

---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  selector: 
    app: client-service 
  ports:
    - name: client-service
      protocol: TCP
      port: 3000
      targetPort: 3000
