infra/k8s/moderation.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
        - name: moderation-service
          image: dushberd/moderation-service   

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector: 
    app: moderation-service 
  ports:
    - name: moderation-service
      protocol: TCP
      port: 4004
      targetPort: 4004
