infra/k8s/query.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: dushberd/query-service   

---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector: 
    app: query-service 
  ports:
    - name: query-service
      protocol: TCP
      port: 4005
      targetPort: 4005
