infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernets.io/ingress.class: nginx
    nginx.ingress.kubernets.io/use-regex: 'true'
spec:
  rules:
    - host: tickets.dev
      http: 
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix  
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 3000
